k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: aplicacao
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api 
    spec:
      containers:
      - name: api
        #image: cmattos59/pedelogo-catalogo:v1
        image: fabricioveronez/pedelogo-catalogo:latest
        #resources:
        #  limits:
        #    memory: "128Mi"
        #   cpu: "500m"
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        imagePullPolicy: Always
