k8s/api/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: aplicacao
spec:
  type: ExternalName
  externalName: mongo-service.banco.svc.cluster.local
