k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: aplicacao
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  type: NodePort
